# alistair

./: .envrc  .pre-commit-config.yaml  README.md  cookiecutter.json  setup.cfg
hooks/: post_gen_project.py
requirements/: dev.in  dev.txt  reqs.in  reqs.txt
test/hooks/: pre-commit
{{cookiecutter.project_slug}}/: .bandit.yaml  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.rst  environment.yml  postbuild  setup.cfg  setup.py  tasks.py
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature-request.md  how-to-question.md  user-feedback.md
{{cookiecutter.project_slug}}/.jupyter/: migrated
{{cookiecutter.project_slug}}/.jupyter/lab/workspaces/: lab-a511.jupyterlab-workspace
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst  modules.rst  notebooks.rst  readme.rst
{{cookiecutter.project_slug}}/requirements/: dev.in  dev.txt  docs.in  docs.txt  reqs.txt  tests.in  tests.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: {{cookiecutter.project_slug}}_test.py
